welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:9: error: ')' expected but ',' found.
		if ( nbPas == 1,nbPas == 3,nbPas == 5) {
                               ^PictureMono:13: error: illegal start of simple expression
	}
        ^